gallery, navbar draft

--- a/src/components/sections/PortfolioSection.astro
+++ b/src/components/sections/PortfolioSection.astro
@@ -5,10 +5,12 @@ import SkillList from "../ui/SkillList.astro";
 type Props = CollectionEntry<"main">["data"]["portfolio"];
 
 const { title, list } = Astro.props;
+
+import { Image } from 'astro:assets';
 ---
 
 <Section title={title} >
-  <div class="grid gap-y-6">{list.map((item)=>{
+  <div class="grid gap-y-6">{list.map((item, index)=>{
     return (
       <div>
           <div class="">
@@ -16,20 +18,31 @@ const { title, list } = Astro.props;
               <p>{item.description}</p>
           </div>
           <div class="mt-2 print:mt-0">
-            <h4 class="text-sm">{item.tech.title}</h4>
             <div class="mt-1">
               <SkillList skills={item.tech.list} />
             </div>
           </div>
-          <div class="pswp-gallery mt-4 flex">
-              <a class="border border-border"
-                 href="/portfolio/parcel-static/img1.png"
-                 data-pswp-width="1669"
-                 data-pswp-height="2500"
-                 target="_blank">
-                  <img class="w-40 aspect-video object-cover" src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="" />
-              </a>
-          </div>
+          {item.images && item.images.length && (
+            <div class="pswp-gallery mt-4 flex gap-2 overflow-x-auto">
+              {item.images.map((imageUrl) => {
+                const prewLink = imageUrl.replace('.','_preview.');
+                return (
+                  <a class="border border-border shrink-0"
+                     data-fancybox=`gallery-${index}` 
+                     href={`/cv/img/${imageUrl}`}
+                     target="_blank">
+                      <Image
+                        src={`/cv/img/${prewLink}`}
+                        alt="descriptive text"
+                        width="125"
+                        height="75"
+                        class="aspect-video object-cover"
+                      />
+                  </a>
+                )
+              })}
+            </div>
+          )}
           <div class="mt-3 flex gap-2">{item.links.map((linkItem) => (
             <a class="inline-flex items-center text-sm gap-x-0.5 underline-offset-4 hover:text-primary hover:underline" href={linkItem.link}>
                 <span class="i-lucide:link w-1em h-1em"></span>{linkItem.name}
@@ -41,21 +54,10 @@ const { title, list } = Astro.props;
 </Section>
 
 <script>
-  import 'photoswipe/style.css'
-  import pswpModule from 'photoswipe'
-  import PhotoSwipeLightbox from 'photoswipe/lightbox'
+  import { Fancybox } from "@fancyapps/ui";
+  import "@fancyapps/ui/dist/fancybox/fancybox.css";
 
-  const lightbox = new PhotoSwipeLightbox({
-    pswpModule,
-    children: 'a',
-    gallery: '#my-gallery',
-  })
-
-  document.addEventListener(
-    'astro:page-load',
-    () => { if (lightbox) lightbox.init() },
-    { once: false },
-  )
+  Fancybox.bind("[data-fancybox]");
 </script>
 
 
