--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -17,7 +17,7 @@ const collection = pages.find((page) => page.id.split("/")[0] === locale)?.data;
 
 <AppLayout>
   <BaseLayout>
-    <MainTabs active="cv" />
+    <!-- <MainTabs active="cv" /> -->
     {
       collection && (
         <main class="grid gap-y-12 md:gap-y-16 print:gap-y-0">
