--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,18 +3,21 @@ import { getCollection } from "astro:content";
 import PageFooter from "../components/sections/PageFooter.astro";
 import HeroSection from "../components/sections/HeroSection.astro";
 import Navbar from "../components/sections/Navbar.astro";
+
 const locale = Astro.currentLocale;
 
 const pages = await getCollection("main");
 const collection = pages.find((page) => page.id.split("/")[0] === locale)?.data;
+const { activePage } = Astro.props;
 ---
-
 
 {
   collection && (
-    <Navbar />
+    <Navbar active={activePage}  />
     <HeroSection {...collection.hero} />
+
     <slot />
+
     <PageFooter {...collection.footer} />
   )
 }
