--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -16,7 +16,7 @@ const collection = pages.find((page) => page.id.split("/")[0] === locale)?.data;
 ---
 
 <AppLayout>
-  <BaseLayout>
+  <BaseLayout activePage="cv">
     <!-- <MainTabs active="cv" /> -->
     {
       collection && (
