--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -1,19 +1,38 @@
 ---
 import { useTranslations } from '../../i18n/ui';
+import ThemeSwitcher from "../ThemeSwitcher.astro";
+import HeroBarItem from "../ui/HeroBarItem.astro";
+import LangSelect from "../LangSelect.astro";
+import PrintBtn from "../PrintBtn.astro";
+import DownloadBtn from "../DownloadBtn.astro";
+import BarHero from "../BarHero.astro";
 const t = useTranslations(Astro.currentLocale);
-const textPrimaryColor = 'bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent border-b-2 border-primary';
+
+const { active } = Astro.props;
+
+const textPrimaryColor = 'bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent';
 
 const locale = Astro.currentLocale;
+const cvLink = `./${locale}`;
+const portfolioLink = `./${locale}/portfolio`;
 ---
 
+
 <div class:list={[
-  "px-container bg-secondary",
+  "px-container bg-accent text-md font-semibold h-10",
   "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem items-center)"
 ]}>
-  <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto] items-center)">
-    <nav>
-    	<a class:list={'pb-2 textPrimaryColor'} href="">{t('tabs.cv.title')}</a>
-    	<a class:list={["ml-4"]} href="">{t('tabs.portfolio.title')}</a>
+  <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto]) h-full">
+    <nav class="h-full flex items-center -ml-3">
+      <div class="md:hover:bg-backplate h-full flex items-center px-3">
+          <a class:list={[active === 'cv' && textPrimaryColor, "text-mute"]} href={cvLink}>{t('tabs.cv.title')}</a>
+      </div>
+      <div class="md:hover:bg-backplate h-full flex items-center px-3">
+          <a class:list={[active === 'portfolio' && textPrimaryColor, "text-mute"]} href={portfolioLink}>{t('tabs.portfolio.title')}</a>
+      </div>
+
+
     </nav>
+      <BarHero />
   </div>
 </div>
