--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -10,7 +10,7 @@ const t = useTranslations(Astro.currentLocale);
 
 const { active } = Astro.props;
 
-const textPrimaryColor = 'bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent';
+const textPrimaryColor = 'text-secondary-foreground font-semibold';
 
 const locale = Astro.currentLocale;
 const cvLink = `./${locale}`;
@@ -19,7 +19,7 @@ const portfolioLink = `./${locale}/portfolio`;
 
 
 <div class:list={[
-  "px-container bg-accent text-md font-semibold h-10",
+  "px-container bg-accent h-10",
   "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem items-center)"
 ]}>
   <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto]) h-full">
