--- a/src/components/sections/PortfolioSection.astro
+++ b/src/components/sections/PortfolioSection.astro
@@ -11,12 +11,11 @@ import { Image } from 'astro:assets';
 ---
 
 <Section title={title}>
-  <div class="grid gap-y-8">{list.map((item, index)=>{
+  <div class="grid gap-y-12">{list.map((item, index)=>{
     return (
       <div>
           <div class="">
-              <h3 class="font-bold print:print:text-sm whitespace-nowrap uppercase">{item.name}</h3>
-              <p>{item.description}</p>
+              <h3 class="inline font-bold print:print:text-sm whitespace-nowrap uppercase">{item.name}</h3> – <p class="inline">{item.description}</p>
           </div>
           <div class="mt-2 print:mt-0">
             <div class="mt-1">
@@ -45,7 +44,7 @@ import { Image } from 'astro:assets';
             </div>
           )}
           <div class="mt-3 flex gap-2">{item.links.map((linkItem) => (
-            <a class="inline-flex items-center text-sm gap-x-0.5 underline-offset-4 hover:text-primary hover:underline" href={linkItem.link}>
+            <a target="_blank" class="inline-flex items-center text-sm gap-x-0.5 underline-offset-4 hover:text-primary hover:underline" href={linkItem.link}>
                 <span class="i-lucide:link w-1em h-1em"></span>{linkItem.name}
             </a>
           ))}</div>
@@ -58,7 +57,10 @@ import { Image } from 'astro:assets';
   import { Fancybox } from "@fancyapps/ui";
   import "@fancyapps/ui/dist/fancybox/fancybox.css";
 
-  Fancybox.bind("[data-fancybox]");
+  document.addEventListener('astro:page-load', () => {
+    Fancybox.bind("[data-fancybox]");
+  })
+  
 </script>
 
 
