--- a/src/components/ui/Experience.astro
+++ b/src/components/ui/Experience.astro
@@ -23,10 +23,14 @@ const { list } = Astro.props;
 <ul class="grid gap-y-6 md:gap-y-8 print:gap-y-2">
 	{list.map((item) => {
 	  	const { name, years, subtitle, features, skills } = item;
+	  	const splitedName = name.split(',').map((item, index) => (
+	  		<span class="after:content-[','] last:after:content-['']">{item}</span>
+	  	))
+
 	  	return (
 		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr] print:gap-y-0">
 		  		<div class="print:(flex justify-between items-center)">
-		  			<h3 class="font-semibold uppercase">{name}</h3>
+		  			<h3 class="font-semibold uppercase flex flex-col">{splitedName}</h3>
 		  			<p>{years}</p>
 		  		</div>
 		  		<div class="grid gap-y-2 md:gap-y-1 print:gap-0">
