--- a/src/components/sections/PortfolioSection.astro
+++ b/src/components/sections/PortfolioSection.astro
@@ -1,56 +1,59 @@
 ---
-import type { CollectionEntry } from "astro:content";
+import { Image } from 'astro:assets';
+
 import Section from "../ui/Section.astro";
 import SkillList from "../ui/SkillList.astro";
+
+import type { CollectionEntry } from "astro:content";
+
 type Props = CollectionEntry<"main">["data"]["portfolio"];
 
 const { title, list } = Astro.props;
 
-import { Image } from 'astro:assets';
-
+const images = await Astro.glob("/public/portfolio/*.png");
+const getImg = (imgKey:string) => images.filter(item => item.default.src.includes(imgKey));
 ---
 
 <Section title={title}>
-  <div class="grid gap-y-12">{list.map((item, index)=>{
-    return (
+  <div class="grid gap-y-12">
+    {list.map((item, index) => (
       <div>
-          <div class="">
-              <h3 class="inline font-bold print:print:text-sm whitespace-nowrap uppercase">{item.name}</h3> – <p class="inline">{item.description}</p>
+        <div>
+          <h3 class="inline font-bold print:print:text-sm whitespace-nowrap uppercase">{item.name}</h3> – <p class="inline">{item.description}</p>
+        </div>
+        <div class="mt-2 print:mt-0">
+          <div class="mt-1">
+            <SkillList skills={item.tech.list} />
           </div>
-          <div class="mt-2 print:mt-0">
-            <div class="mt-1">
-              <SkillList skills={item.tech.list} />
-            </div>
+        </div>
+        {item.imgKey && (
+          <div class="pswp-gallery mt-4 flex gap-2 overflow-x-auto">
+            {getImg('parcel-static').map(imgItem => (
+              <a class="border border-border shrink-0"
+               data-fancybox="gallery-${index}"
+               href={imgItem.default.src}
+               target="_blank">
+                <Image
+                  src={imgItem.default}
+                  alt="descriptive text"
+                  width="125"
+                  height="75"
+                  class="aspect-video object-cover"
+                />
+              </a>
+            ))}
           </div>
-          {item.images && item.images.length && (
-            <div class="pswp-gallery mt-4 flex gap-2 overflow-x-auto">
-              {item.images.map((imageUrl) => {
-                const prewLink = imageUrl.replace('.','_preview.');
-                return (
-                  <a class="border border-border shrink-0"
-                     data-fancybox=`gallery-${index}`
-                     href={`/cv/img/${imageUrl}`}
-                     target="_blank">
-                      <Image
-                        src={`/cv/img/${prewLink}`}
-                        alt="descriptive text"
-                        width="125"
-                        height="75"
-                        class="aspect-video object-cover"
-                      />
-                  </a>
-                )
-              })}
-            </div>
-          )}
-          <div class="mt-3 flex gap-2">{item.links.map((linkItem) => (
+        )}
+        <div class="mt-3 flex gap-2">
+          {item.links.map((linkItem) => (
             <a target="_blank" class="inline-flex items-center text-sm gap-x-0.5 underline-offset-4 hover:text-primary hover:underline" href={linkItem.link}>
-                <span class="i-lucide:link w-1em h-1em"></span>{linkItem.name}
+              <span class="i-lucide:link w-1em h-1em"></span>{linkItem.name}
             </a>
-          ))}</div>
+          ))}
+        </div>
       </div>
     )
-  })}</div>
+  )}</div>
 </Section>
 
 <script>
@@ -58,9 +61,7 @@ import { Image } from 'astro:assets';
   import "@fancyapps/ui/dist/fancybox/fancybox.css";
 
   document.addEventListener('astro:page-load', () => {
-    Fancybox.bind("[data-fancybox]");
+    Fancybox.bind("[data-fancybox]", { Hash: false });
   })
   
 </script>
-
-
