--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -14,7 +14,7 @@ const portfolioLink = `./${locale}/portfolio`;
 
 
 <div class:list={[
-  "px-container bg-accent h-12 md:h-10",
+  "px-container bg-accent h-12 md:h-10 sticky top-0 z-50",
   "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem items-center)"
 ]}>
   <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto]) h-full">
